update render command

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -18,7 +18,7 @@
         // Hi, my name is Foo. I like to sleep.
 
         ReactDom.render(
-          <h1>Hi, my name is Foo.  I like to sleep.</h1>
+          <h1>Hi, my name is Foo.  I like to sleep.</h1>,
           document.getElementById('my-react-container')
         );
 
