--- a/src/www/index.html
+++ b/src/www/index.html
@@ -17,6 +17,12 @@
 
         // Hi, my name is Foo. I like to sleep.
 
+        ReactDOM.render(
+	<h1>Hi, my name is Foo.  I like to sleep.</h1>,
+	document.getElementById(‘my-react-container’)
+);
+
+
     </script>
 
 </body>
